packages/Sympathy/Sympathy-1.6.2-py3-none-any.whl/sympathy_app/Sympathy/Test/Unit/Workflows/errors/link_loop_indirect/link_loop_c.syx
<?xml version='1.0' encoding='ASCII'?>
<flow xmlns="http://www.sysess.org/sympathyfordata/workflow/1.0" cls="Flow" height="50.0" id="" is_locked="False" uuid="{591715a9-f160-4b63-b7fa-df5306dceacb}" width="50.0" x="1750.0" y="1925.0">
  <label/>
  <description></description>
  <author></author>
  <copyright></copyright>
  <version></version>
  <min_version></min_version>
  <aggregation type="json">null</aggregation>
  <libraries type="json">[]</libraries>
  <pythonpaths type="json">[]</pythonpaths>
  <overrides type="json">{}</overrides>
  <parameters type="json">{}</parameters>
  <ports/>
  <flow cls="Flow" height="50.0" id="" is_locked="False" source_uuid="{b79fe611-2727-49f2-a36c-cc51769f9697}" uuid="{2bf33841-d305-4f9a-8469-11218abbf5c7}" width="50.0" x="1835.0" y="1921.0" href="link_loop_a.syx">
    <label>link_loop_a</label>
    <overrides type="json">{}</overrides>
    <ports/>
  </flow>
</flow>
